--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCl5tmmWqh5ovmuGySS7ZLXrurqxp7xd_U&libraries=places"></script>
+    <script data-ad-client="ca-pub-7526083259939522" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Traveling Strategy</title>
   </head>
