--- a/server/src/endpoints/success.html
+++ b/server/src/endpoints/success.html
@@ -3,7 +3,7 @@
   <head>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-pdapHxIh7EYuwy6K7iE41uXVxGCXY0sAjBzaElYGJUrzwodck3Lx6IE2lA0rFREo" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300|Montserrat' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="./stylesheet.css">
+    <link rel="stylesheet" href="https://codepen.io/mikesmvl-the-flexboxer/pen/ZEGLMGZ.css">
     <script>
       setTimeout(function () {
          // after 2 seconds
